//    Copyright 2023 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.r5.core;

import "google/protobuf/any.proto";
import "proto/google/fhir/proto/annotations.proto";
import "proto/google/fhir/proto/r5/core/codes.proto";
import "proto/google/fhir/proto/r5/core/datatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.r5.core";
option (.google.fhir.proto.fhir_version) = R5;
option go_package = "github.com/google/fhir/go/proto/google/fhir/proto/r5/core/resources/ingredient_go_proto";

// Auto-generated from StructureDefinition for Ingredient.
// An ingredient of a manufactured item or pharmaceutical product.
// See http://hl7.org/fhir/StructureDefinition/Ingredient
message Ingredient {
  option (.google.fhir.proto.structure_definition_kind) = KIND_RESOURCE;
  option (.google.fhir.proto.fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/Ingredient";
  option (.google.fhir.proto.fhir_path_message_constraint) =
      "Ingredient.where(allergenicIndicator=true).count() + Ingredient.substance.code.reference.count()  < 2";

  // Logical id of this artifact
  Id id = 1;

  // Metadata about the resource
  Meta meta = 2;

  // A set of rules under which this content was created
  Uri implicit_rules = 3;

  // Language of the resource content
  Code language = 4;

  // Text summary of the resource, for human interpretation
  Narrative text = 5;

  // Contained, inline Resources
  repeated protobuf.Any contained = 6;

  // Field 7 reserved for strongly-typed ContainedResource for id:
  // Ingredient.contained
  reserved 7;

  // Additional content defined by implementations
  repeated Extension extension = 8;

  // Extensions that cannot be ignored
  repeated Extension modifier_extension = 9;

  // An identifier or code by which the ingredient can be referenced
  Identifier identifier = 10;

  // draft | active | retired | unknown
  message StatusCode {
    option (.google.fhir.proto.structure_definition_kind) = KIND_PRIMITIVE_TYPE;
    option (.google.fhir.proto.fhir_valueset_url) =
        "http://hl7.org/fhir/ValueSet/publication-status";
    option (.google.fhir.proto.fhir_profile_base) =
        "http://hl7.org/fhir/StructureDefinition/code";

    PublicationStatusCode.Value value = 1;

    String id = 2;

    repeated Extension extension = 3;
  }
  StatusCode status = 11
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // The product which this ingredient is a constituent part of
  repeated Reference for_value = 12 [
    (.google.fhir.proto.valid_reference_type) = "MedicinalProductDefinition",
    (.google.fhir.proto.valid_reference_type) =
        "AdministrableProductDefinition",
    (.google.fhir.proto.valid_reference_type) = "ManufacturedItemDefinition",
    json_name = "for"
  ];

  // Purpose of the ingredient within the product, e.g. active, inactive
  CodeableConcept role = 13
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

  // Precise action within the drug product, e.g. antioxidant, alkalizing agent
  repeated CodeableConcept function = 14;

  // A classification of the ingredient according to where in the physical item
  // it tends to be used, such the outer shell of a tablet, inner body or ink
  CodeableConcept group = 15;

  // If the ingredient is a known or suspected allergen
  Boolean allergenic_indicator = 16;

  // A place for providing any notes that are relevant to the component, e.g.
  // removed during process, adjusted for loss on drying
  Markdown comment = 17;

  // An organization that manufactures this ingredient
  message Manufacturer {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // allowed | possible | actual
    message RoleCode {
      option (.google.fhir.proto.structure_definition_kind) =
          KIND_PRIMITIVE_TYPE;
      option (.google.fhir.proto.fhir_valueset_url) =
          "http://hl7.org/fhir/ValueSet/ingredient-manufacturer-role";
      option (.google.fhir.proto.fhir_profile_base) =
          "http://hl7.org/fhir/StructureDefinition/code";

      IngredientManufacturerRoleCode.Value value = 1;

      String id = 2;

      repeated Extension extension = 3;
    }
    RoleCode role = 4;

    // An organization that manufactures this ingredient
    Reference manufacturer = 5 [
      (.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR,
      (.google.fhir.proto.valid_reference_type) = "Organization"
    ];
  }
  repeated Manufacturer manufacturer = 18;

  // The substance that comprises this ingredient
  message Substance {
    // Unique id for inter-element referencing
    String id = 1;

    // Additional content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored even if unrecognized
    repeated Extension modifier_extension = 3;

    // A code or full resource that represents the ingredient substance
    CodeableReference code = 4
        [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

    // The quantity of substance, per presentation, or per volume or mass, and
    // type of quantity
    message Strength {
      // Unique id for inter-element referencing
      String id = 1;

      // Additional content defined by implementations
      repeated Extension extension = 2;

      // Extensions that cannot be ignored even if unrecognized
      repeated Extension modifier_extension = 3;

      // The quantity of substance in the unit of presentation
      message PresentationX {
        option (.google.fhir.proto.is_choice_type) = true;

        oneof choice {
          Ratio ratio = 1;
          RatioRange ratio_range = 2;
          CodeableConcept codeable_concept = 3;
          Quantity quantity = 4;
        }
      }
      PresentationX presentation = 4;

      // Text of either the whole presentation strength or a part of it (rest
      // being in Strength.presentation as a ratio)
      String text_presentation = 5;

      // The strength per unitary volume (or mass)
      message ConcentrationX {
        option (.google.fhir.proto.is_choice_type) = true;

        oneof choice {
          Ratio ratio = 1;
          RatioRange ratio_range = 2;
          CodeableConcept codeable_concept = 3;
          Quantity quantity = 4;
        }
      }
      ConcentrationX concentration = 6;

      // Text of either the whole concentration strength or a part of it (rest
      // being in Strength.concentration as a ratio)
      String text_concentration = 7;

      // A code that indicates if the strength is, for example, based on the
      // ingredient substance as stated or on the substance base (when the
      // ingredient is a salt)
      CodeableConcept basis = 8;

      // When strength is measured at a particular point or distance
      String measurement_point = 9;

      // Where the strength range applies
      repeated CodeableConcept country = 10;

      // Strength expressed in terms of a reference substance
      message ReferenceStrength {
        // Unique id for inter-element referencing
        String id = 1;

        // Additional content defined by implementations
        repeated Extension extension = 2;

        // Extensions that cannot be ignored even if unrecognized
        repeated Extension modifier_extension = 3;

        // Relevant reference substance
        CodeableReference substance = 4
            [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

        // Strength expressed in terms of a reference substance
        message StrengthX {
          option (.google.fhir.proto.is_choice_type) = true;

          oneof choice {
            Ratio ratio = 1;
            RatioRange ratio_range = 2;
            Quantity quantity = 3;
          }
        }
        StrengthX strength = 5
            [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];

        // When strength is measured at a particular point or distance
        String measurement_point = 6;

        // Where the strength range applies
        repeated CodeableConcept country = 7;
      }
      repeated ReferenceStrength reference_strength = 11;
    }
    repeated Strength strength = 5;
  }
  Substance substance = 19
      [(.google.fhir.proto.validation_requirement) = REQUIRED_BY_FHIR];
}
